--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,7 +8,7 @@
 
     <div class="container">
         <div class="row">
-            <div class="col-lg-12">
+            <div class="col-md-8">
                 {{ content }}
             </div>
         </div>
