--- a/_includes/_head.html
+++ b/_includes/_head.html
@@ -8,6 +8,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 <link rel="stylesheet" href="{{ site.url }}/assets/bootstrap.css" media="screen">
+    <link rel="stylesheet" href="{{ site.url }}/assets/syntax.css">
 <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 <style type="text/css">
     /* padding for bootstrap navbar */
