--- a/_includes/_footer.html
+++ b/_includes/_footer.html
@@ -2,8 +2,8 @@
   <footer>
     <hr>
     <p>This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International License</a>.</p>
-    <p>Last updated: {{ site.time | date: "%Y-%m-%d" }} by <a href="http://peter.solymos.org">P&eacute;ter S&oacute;lymos</a>.</p>
-    <p>Powered by <a href="http://jekyllrb.com">Jekyll</a> using <a href="http://getbootstrap.com/">Bootstrap</a>. View source at <a href="https://github.com/datacloning/">GitHub</a>.</p>
+    <p>Last updated: {{ site.time | date: "%Y-%m-%d" }}. Maintained by <a href="http://peter.solymos.org">P&eacute;ter S&oacute;lymos</a>.</p>
+    <p>Powered by <a href="http://jekyllrb.com">Jekyll</a> using <a href="http://getbootstrap.com/">Bootstrap</a>. View source at <a href="https://github.com/datacloning/datacloning.github.io">GitHub</a>.</p>
   </footer>
 </div>
 
