--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,11 +7,11 @@
   {% include _navigation.html %}
 
     <div class="container">
-        <div class="row">
-            <div class="col-md-8">
+<!--        <div class="row">
+            <div class="col-md-8"> -->
                 {{ content }}
-            </div>
-        </div>
+<!--            </div>
+        </div> -->
     </div>
 
   {% include _footer.html %}
