--- a/_includes/_navigation.html
+++ b/_includes/_navigation.html
@@ -12,14 +12,14 @@
         <div class="navbar-collapse collapse" id="navbar-main">
           <ul class="nav navbar-nav">
             <li class="dropdown">
-              <a class="dropdown-toggle" data-toggle="dropdown" href="#" id="results">Results <span class="caret"></span></a>
+              <a class="dropdown-toggle" data-toggle="dropdown" href="#" id="results">Software <span class="caret"></span></a>
               <ul class="dropdown-menu" aria-labelledby="themes">
                 <li class="dropdown-header">R packages</li>
                 <li><a href="http://github.com/datacloning/dclone">dclone</a></li>
                 <li><a href="http://github.com/datacloning/dcmle">dcmle</a></li>
                 <li class="divider"></li>
-                <li class="dropdown-header">Extras</li>
-                <li><a href="{{ site.url }}/features/">Features</a></li>
+                <li class="dropdown-header">Dependencies</li>
+                <li><a href="{{ site.url }}/courses/">Courses</a></li>
                 <li><a href="{{ site.url }}/tutorials/">Cosmo</a></li>
 
               </ul>
@@ -29,7 +29,8 @@
               <a class="dropdown-toggle" data-toggle="dropdown" href="#" id="resources">Resources <span class="caret"></span></a>
               <ul class="dropdown-menu" aria-labelledby="themes">
 
-                <li><a href="./default/">Default</a></li>
+                <li><a href="{{ site.url }}/courses/">Courses</a></li>
+                <li><a href="{{ site.url }}/courses/">Courses</a></li>
                 <li class="divider"></li>
                 <li><a href="./cerulean/">Cerulean</a></li>
                 <li><a href="./cosmo/">Cosmo</a></li>
