--- a/_includes/_head.html
+++ b/_includes/_head.html
@@ -9,8 +9,8 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 <link rel="stylesheet" href="{{ site.url }}/assets/bootstrap.css" media="screen">
 <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
-<link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/8.6/styles/default.min.css">
-<script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/8.6/highlight.min.js"></script>
+<link rel="stylesheet" href="{{ site.url }}/assets/highlight.github.css">
+<script src="{{ site.url }}/assets/highlight.pack.js"></script>
 <script>hljs.initHighlightingOnLoad();</script>
 <style type="text/css">
     /* padding for bootstrap navbar */
