--- a/_includes/_head.html
+++ b/_includes/_head.html
@@ -12,6 +12,9 @@
 <link rel="stylesheet" href="{{ site.url }}/assets/highlight.github.css">
 <script src="{{ site.url }}/assets/highlight.pack.js"></script>
 <script>hljs.initHighlightingOnLoad();</script>
+<script type="text/javascript"
+    src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
+</script>
 <style type="text/css">
     /* padding for bootstrap navbar */
     body {
