--- a/_includes/_head.html
+++ b/_includes/_head.html
@@ -9,13 +9,13 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 <link rel="stylesheet" href="{{ site.url }}/assets/bootstrap.css" media="screen">
 <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
-<link rel="stylesheet" href="{{ site.url }}/assets/highlight.github.css">
+<!-- <link rel="stylesheet" href="{{ site.url }}/assets/highlight.github.css">
 <script src="{{ site.url }}/assets/highlight.pack.js"></script>
-<script>hljs.initHighlightingOnLoad();</script>
+<script>hljs.initHighlightingOnLoad();</script> -->
 <script type="text/x-mathjax-config">
-MathJax.Hub.Config({
-  tex2jax: {inlineMath: [['$','$'], ['\\(','\\)']]}
-});
+    MathJax.Hub.Config({
+        tex2jax: {inlineMath: [['$','$'], ['\\(','\\)']]}
+    });
 </script>
 <script type="text/javascript"
     src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
@@ -28,6 +28,9 @@ MathJax.Hub.Config({
     }
     .gsc-results-wrapper-overlay, .gsc-results-wrapper-visible, .gsc-search-button, .gsc-search-button-v2 {
         box-sizing: content-box;
+    }
+    h1, h2, h3, h4, h5, h6 {
+        color: Salmon;
     }
 </style>
 <link rel="shortcut icon" href="{{ site.url }}/favicon.ico">
