--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,15 +5,21 @@
   </head>
   <body>
   {% include _navigation.html %}
-
     <div class="container">
-<!--        <div class="row">
-            <div class="col-md-8"> -->
+        <div class="row">
+            <div class="col-md-10 col-md-offset-1">
+                {% if page.title %}
+                    {% if page.subtitle %}
+                        <a href="{{ page.url }}"><h1 class="title">{{ page.title }}</h1></a>
+                        <h2 class="subtitle">{{ page.subtitle }}</h2>
+                    {% else %}
+                        <h1 class="title">{{ page.title }}</h1>
+                    {% endif %}
+                {% endif %}
                 {{ content }}
-<!--            </div>
-        </div> -->
+            </div>
+        </div>
     </div>
-
   {% include _footer.html %}
   </body>
 </html>
