--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,7 +10,7 @@
             <div class="col-md-10 col-md-offset-1">
                 {% if page.title %}
                     {% if page.subtitle %}
-                        <a href="{{ page.url }}"><h1 class="title">{{ page.title }}</h1></a>
+                        <a href="index.html"><h1 class="title">{{ page.title }}</h1></a>
                         <h2 class="subtitle">{{ page.subtitle }}</h2>
                     {% else %}
                         <h1 class="title">{{ page.title }}</h1>
