--- a/_includes/_head.html
+++ b/_includes/_head.html
@@ -1,6 +1,3 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
 <meta charset="utf-8">
 <title>{% if page.title %}{{ page.title | strip_html }} &#8211; {% endif %}{{ site.title }}</title>
 <meta name="description" content="{{ page.description }}">
@@ -9,9 +6,9 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 <link rel="stylesheet" href="{{ site.url }}/assets/bootstrap.css" media="screen">
 <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
-<!-- <link rel="stylesheet" href="{{ site.url }}/assets/highlight.github.css">
+<link rel="stylesheet" href="{{ site.url }}/assets/highlight.github.css">
 <script src="{{ site.url }}/assets/highlight.pack.js"></script>
-<script>hljs.initHighlightingOnLoad();</script> -->
+<script>hljs.initHighlightingOnLoad();</script>
 <script type="text/x-mathjax-config">
     MathJax.Hub.Config({
         tex2jax: {inlineMath: [['$','$'], ['\\(','\\)']]}
@@ -34,4 +31,3 @@
     }
 </style>
 <link rel="shortcut icon" href="{{ site.url }}/favicon.ico">
-</head>
