--- a/_includes/_head.html
+++ b/_includes/_head.html
@@ -6,16 +6,16 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 <link rel="stylesheet" href="{{ site.url }}/assets/bootstrap.css" media="screen">
 <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
-<link rel="stylesheet" href="{{ site.url }}/assets/highlight.github.css">
+<!-- <link rel="stylesheet" href="{{ site.url }}/assets/highlight.github.css">
 <script src="{{ site.url }}/assets/highlight.pack.js"></script>
-<!-- <script>hljs.initHighlightingOnLoad();</script> -->
+<script>hljs.initHighlightingOnLoad();</script>
 <script>
     $(document).ready(function() {
         $('pre code').each(function(i, block) {
             hljs.highlightBlock(block);
         });
     });
-</script>
+</script> -->
 <script type="text/x-mathjax-config">
     MathJax.Hub.Config({
         tex2jax: {inlineMath: [['$','$'], ['\\(','\\)']]}
