switch to baseurl

--- a/_includes/_head.html
+++ b/_includes/_head.html
@@ -4,10 +4,10 @@
 <meta name="keywords" content="{{ page.tags | join: ', ' }}">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-<link rel="stylesheet" href="{{ site.url }}/assets/bootstrap.css" media="screen">
+<link rel="stylesheet" href="{{ site.baseurl }}/assets/bootstrap.css" media="screen">
 <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
-<!-- <link rel="stylesheet" href="{{ site.url }}/assets/highlight.github.css">
-<script src="{{ site.url }}/assets/highlight.pack.js"></script>
+<!-- <link rel="stylesheet" href="{{ site.baseurl }}/assets/highlight.github.css">
+<script src="{{ site.baseurl }}/assets/highlight.pack.js"></script>
 <script>hljs.initHighlightingOnLoad();</script>
 <script>
     $(document).ready(function() {
@@ -37,4 +37,4 @@
         color: Salmon;
     }
 </style>
-<link rel="shortcut icon" href="{{ site.url }}/favicon.ico">
+<link rel="shortcut icon" href="{{ site.baseurl }}/favicon.ico">
