--- a/_includes/_navigation.html
+++ b/_includes/_navigation.html
@@ -2,7 +2,7 @@
     <div class="navbar navbar-fixed-top navbar-inverse">
       <div class="container">
         <div class="navbar-header">
-          <a class="navbar-brand" href="{{ site.url }}">{{ site.title }}</a> 
+          <a class="navbar-brand" href="{{ site.baseurl }}">{{ site.title }}</a> 
           <button class="navbar-toggle" type="button" data-toggle="collapse" data-target="#navbar-main">
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
@@ -19,8 +19,8 @@
                 <li><a href="http://github.com/datacloning/dcmle">dcmle</a></li>
                 <li class="divider"></li>
                 <li class="dropdown-header">Dependencies</li>
-                <li><a href="{{ site.url }}/courses/">Courses</a></li>
-                <li><a href="{{ site.url }}/tutorials/">Cosmo</a></li>
+                <li><a href="{{ site.baseurl }}/courses/">Courses</a></li>
+                <li><a href="{{ site.baseurl }}/tutorials/">Cosmo</a></li>
 
               </ul>
             </li>
@@ -29,8 +29,8 @@
               <a class="dropdown-toggle" data-toggle="dropdown" href="#" id="resources">Resources <span class="caret"></span></a>
               <ul class="dropdown-menu" aria-labelledby="themes">
 
-                <li><a href="{{ site.url }}/courses/">Courses</a></li>
-                <li><a href="{{ site.url }}/courses/">Courses</a></li>
+                <li><a href="{{ site.baseurl }}/courses/">Courses</a></li>
+                <li><a href="{{ site.baseurl }}/courses/">Courses</a></li>
                 <li class="divider"></li>
                 <li><a href="./cerulean/">Cerulean</a></li>
                 <li><a href="./cosmo/">Cosmo</a></li>
@@ -53,12 +53,12 @@
             </li>
 
             <li>
-              <a href="{{ site.url }}/news.html">Blog</a>
+              <a href="{{ site.baseurl }}/news.html">Blog</a>
             </li>
           </ul>
 
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="{{ site.url }}/search.html">Search</a></li>
+            <li><a href="{{ site.baseurl }}/search.html">Search</a></li>
           </ul>
 
         </div>
