--- a/_includes/_head.html
+++ b/_includes/_head.html
@@ -27,8 +27,13 @@
 <style type="text/css">
     /* padding for bootstrap navbar */
     body {
-        padding-top: 50px;
-        padding-bottom: 70px;
+        padding-top: 70px;
+        padding-bottom: 40px;
+    }
+    @media (max-width: 979px) {
+        body {
+            padding-top: 0px;
+        }
     }
     .gsc-results-wrapper-overlay, .gsc-results-wrapper-visible, .gsc-search-button, .gsc-search-button-v2 {
         box-sizing: content-box;
