--- a/_includes/_navigation.html
+++ b/_includes/_navigation.html
@@ -1,5 +1,6 @@
     <!-- <div class="navbar navbar-default navbar-fixed-top navbar-transparent"> -->
-    <div class="navbar navbar-fixed-top navbar-inverse">
+    <!-- <div class="navbar navbar-fixed-top navbar-inverse"> -->
+    <div class="navbar navbar-static-top navbar-inverse">
       <div class="container">
         <div class="navbar-header">
           <a class="navbar-brand" href="{{ site.baseurl }}">{{ site.title }}</a> 
