go back immediately

--- a/_includes/_head.html
+++ b/_includes/_head.html
@@ -26,7 +26,7 @@
 </script>
 <style type="text/css">
     /* padding for bootstrap navbar */
-    <!-- body {
+    body {
         padding-top: 70px;
         padding-bottom: 40px;
     }
@@ -34,7 +34,7 @@
         body {
             padding-top: 0px;
         }
-    } -->
+    }
     .gsc-results-wrapper-overlay, .gsc-results-wrapper-visible, .gsc-search-button, .gsc-search-button-v2 {
         box-sizing: content-box;
     }
