--- a/_includes/_head.html
+++ b/_includes/_head.html
@@ -38,9 +38,9 @@
     .gsc-results-wrapper-overlay, .gsc-results-wrapper-visible, .gsc-search-button, .gsc-search-button-v2 {
         box-sizing: content-box;
     }
-    /* Salmon or MidnightBlue */
+    /* Salmon Orange Tomato IndianRed MidnightBlue */
     h1, h2, h3, h4, h5, h6 {
-        color: MidnightBlue;
+        color: IndianRed;
     }
 </style>
 <link rel="shortcut icon" href="{{ site.baseurl }}/favicon.ico">
