see if this is the problem

--- a/_includes/_navigation.html
+++ b/_includes/_navigation.html
@@ -51,15 +51,13 @@
 
               </ul>
             </li>
-
-            <li>
-              <a href="{{ site.baseurl }}/news.html">Blog</a>
-            </li>
-          </ul>
-
-          <ul class="nav navbar-nav navbar-right">
+            <li><a href="{{ site.baseurl }}/news.html">Blog</a></li>
             <li><a href="{{ site.baseurl }}/search.html">Search</a></li>
-          </ul>
+           </ul>
+
+<!--          <ul class="nav navbar-nav navbar-right">
+            <li><a href="{{ site.baseurl }}/search.html">Search</a></li>
+          </ul> -->
 
         </div>
       </div>
