--- a/_includes/_head.html
+++ b/_includes/_head.html
@@ -30,12 +30,19 @@
         padding-top: 70px;
         padding-bottom: 40px;
     }
+    /* Google custom search look and feel */
     .gsc-results-wrapper-overlay, .gsc-results-wrapper-visible, .gsc-search-button, .gsc-search-button-v2 {
         box-sizing: content-box;
     }
     /* Salmon Orange Tomato IndianRed MidnightBlue */
     h1, h2, h3, h4, h5, h6 {
         color: IndianRed;
+    }
+    /* override defaults to get info block */
+    blockquote {
+        font-size: inherits;
+        border-left: 5px solid Orange;
+        background-color: #ecf0f1;
     }
 </style>
 <link rel="shortcut icon" href="{{ site.baseurl }}/favicon.ico">
