font size needs direct override

--- a/_includes/_head.html
+++ b/_includes/_head.html
@@ -40,8 +40,8 @@
     }
     /* override defaults to get info block */
     blockquote {
-        font-size: inherits;
-        border-left: 5px solid Orange;
+        font-size: 10px;
+        border-left: 5px solid IndianRed;
         background-color: #ecf0f1;
     }
 </style>
