--- a/_includes/_head.html
+++ b/_includes/_head.html
@@ -40,7 +40,7 @@
     }
     /* override defaults to get info block */
     blockquote {
-        font-size: 10px;
+        font-size: 100%;
         border-left: 5px solid IndianRed;
         background-color: #ecf0f1;
     }
