--- a/_includes/_head.html
+++ b/_includes/_head.html
@@ -34,15 +34,16 @@
     .gsc-results-wrapper-overlay, .gsc-results-wrapper-visible, .gsc-search-button, .gsc-search-button-v2 {
         box-sizing: content-box;
     }
-    /* Salmon Orange Tomato IndianRed MidnightBlue */
+    /* same color as inline code */
     h1, h2, h3, h4, h5, h6 {
-        color: IndianRed;
+        color: #c7254e;
     }
     /* override defaults to get info block */
     blockquote {
         font-size: 100%;
-        border-left: 5px solid IndianRed;
-        background-color: #ecf0f1;
+        border-left: 5px solid #c7254e;
+        /* background-color: #ecf0f1; */
+        background-color: #f9f2f4;
     }
 </style>
 <link rel="shortcut icon" href="{{ site.baseurl }}/favicon.ico">
