--- a/_includes/_head.html
+++ b/_includes/_head.html
@@ -25,6 +25,12 @@
     src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
 </script>
 <style type="text/css">
+    /* different font family */
+    @import url(https://fonts.googleapis.com/css?family=Yanone+Kaffeesatz);
+    @import url(https://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic);
+    @import url(https://fonts.googleapis.com/css?family=Ubuntu+Mono:400,700,400italic);
+    body { font-family: 'Droid Serif'; }
+    h1, h2, h3, h4, h5, h6 { font-family: 'Yanone Kaffeesatz'; }
     /* padding for bootstrap navbar */
     body {
         padding-top: 70px;
