--- a/_includes/_head.html
+++ b/_includes/_head.html
@@ -28,13 +28,11 @@
     /* different font family */
     @import url(https://fonts.googleapis.com/css?family=Yanone+Kaffeesatz);
     @import url(https://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic);
-    @import url(https://fonts.googleapis.com/css?family=Ubuntu+Mono:400,700,400italic);
-    body { font-family: 'Droid Serif'; }
-    h1, h2, h3, h4, h5, h6 { font-family: 'Yanone Kaffeesatz'; }
     /* padding for bootstrap navbar */
     body {
         padding-top: 70px;
         padding-bottom: 40px;
+        font-family: 'Droid Serif'; 
     }
     /* Google custom search look and feel */
     .gsc-results-wrapper-overlay, .gsc-results-wrapper-visible, .gsc-search-button, .gsc-search-button-v2 {
@@ -43,12 +41,12 @@
     /* same color as inline code */
     h1, h2, h3, h4, h5, h6 {
         color: #c7254e;
+        font-family: 'Yanone Kaffeesatz';
     }
     /* override defaults to get info block */
     blockquote {
         font-size: 100%;
         border-left: 5px solid #c7254e;
-        /* background-color: #ecf0f1; */
         background-color: #f9f2f4;
     }
 </style>
