--- a/_includes/_head.html
+++ b/_includes/_head.html
@@ -62,3 +62,218 @@
     }
 </style>
 <link rel="shortcut icon" href="{{ site.baseurl }}/favicon.ico">
+
+<!-- highlight.js -->
+<!--<link href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/7.3/styles/default.min.css" rel="stylesheet" id="code-style">-->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/7.3/highlight.min.js"></script>
+<script>
+    hljs.LANGUAGES.r=function(a){var b="([a-zA-Z]|\\.[a-zA-Z.])[a-zA-Z0-9._]*";return{c:[a.HCM,{b:b,l:b,k:{keyword:"function if in break next repeat else for return switch while try tryCatch|10 stop warning require library attach detach source setMethod setGeneric setGroupGeneric setClass ...|10",literal:"NULL NA TRUE FALSE T F Inf NaN NA_integer_|10 NA_real_|10 NA_character_|10 NA_complex_|10"},r:0},{cN:"number",b:"0[xX][0-9a-fA-F]+[Li]?\\b",r:0},{cN:"number",b:"\\d+(?:[eE][+\\-]?\\d*)?L\\b",r:0},{cN:"number",b:"\\d+\\.(?!\\d)(?:i\\b)?",r:0},{cN:"number",b:"\\d+(?:\\.\\d*)?(?:[eE][+\\-]?\\d*)?i?\\b",r:0},{cN:"number",b:"\\.\\d+(?:[eE][+\\-]?\\d*)?i?\\b",r:0},{b:"`",e:"`",r:0},{cN:"string",b:'"',e:'"',c:[a.BE],r:0},{cN:"string",b:"'",e:"'",c:[a.BE],r:0}]}}(hljs); </script>
+<!--<script type="text/javascript", src="https://yandex.st/highlightjs/7.3/languages/r.min.js"></script>-->
+
+<!-- Manific Popup -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/0.8.9/jquery.magnific-popup.min.js"></script>
+
+</script><script defer="defer">// Function to generate the dynamic table of contents
+    jQuery.fn.generate_TOC = function () {
+        var base = $(this[0]);
+        
+        var selectors = ['h1', 'h2', 'h3', 'h4'];
+        
+        var last_ptr = [{}, {}, {}, {}];
+        
+        var anchors = {};
+        
+        generate_anchor = function (text) {
+            var test = text.replace(/\W/g, '_');
+            
+            while(test in anchors){
+                //if no suffix, add one
+                if(test.match(/_\d+$/) === null){
+                    test = test + "_2";
+                }
+                //else generate unique id for duplicates by adding one to the suffix
+                else {
+                    test = test.replace(/_(\d+)$/, function(match, number){ var num=+number+1; return("_" + num) });
+                }
+            }
+            anchors[test]=1;
+            return(test);
+        }
+        
+        $(selectors.join(',')).filter(function(index) { return $(this).parent().attr("id") != 'header'; }).each(function () {
+                                                                                                                
+                                                                                                                var heading = $(this);
+                                                                                                                var idx = selectors.indexOf(heading.prop('tagName').toLowerCase());
+                                                                                                                var itr = 0;
+                                                                                                                
+                                                                                                                while (itr <= idx) {
+                                                                                                                if (jQuery.isEmptyObject(last_ptr[itr])) {
+                                                                                                                last_ptr[itr] = $('<ul>').addClass('nav');
+                                                                                                                if (itr === 0) {
+                                                                                                                base.append(last_ptr[itr])
+                                                                                                                } else {
+                                                                                                                if(last_ptr[itr-1].children('li').length === 0){
+                                                                                                                last_ptr[itr-1].append(last_ptr[itr]);
+                                                                                                                }
+                                                                                                                else {
+                                                                                                                last_ptr[itr - 1].children('li').last().append(last_ptr[itr]);
+                                                                                                                }
+                                                                                                                }
+                                                                                                                }
+                                                                                                                itr++;
+                                                                                                                }
+                                                                                                                var anchor = generate_anchor(heading.text());
+                                                                                                                heading.attr('id', anchor);
+                                                                                                                var a = $('<a>')
+                                                                                                                .text(heading.text())
+                                                                                                                .attr('href', '#' + anchor);
+                                                                                                                
+                                                                                                                var li = $('<li>')
+                                                                                                                .append(a);
+                                                                                                                
+                                                                                                                last_ptr[idx].append(li);
+                                                                                                                for (i = idx + 1; i < last_ptr.length; i++) {
+                                                                                                                last_ptr[i] = {};
+                                                                                                                }
+                                                                                                                });
+    }
+/* run scripts when document is ready */
+$(function() {
+  "use strict";
+  
+  var $window = $(window);
+  var $body = $(document.body);
+  
+  /* size of thumbnails */
+  
+  var hidden_types = ['source']
+  var output_types = ['output', 'message', 'warning', 'error']
+  
+  /* style tables */
+  $('table').addClass('table table-striped table-bordered table-hover table-condensed');
+  
+  $('pre code').each(function(i, e) {
+                     hljs.highlightBlock(e);
+                     });
+  
+  /* Magnific Popup */
+  $(".thumbnail").each(function(){
+                       $(this).magnificPopup({
+                                             disableOn: 768,
+                                             closeOnContentClick: true,
+                                             
+                                             type: 'image',
+                                             items: {
+                                             src: $(this).find('img').attr('src'),
+                                             }
+                                             });
+                       });
+  
+  function toggle_block(obj, show) {
+  var span = obj.find('span');
+  if(show === true){
+  span.removeClass('glyphicon-chevron-up').addClass('glyphicon-chevron-down');
+  obj.next('pre').slideDown();
+  }
+  else {
+  span.removeClass('glyphicon-chevron-down').addClass('glyphicon-chevron-up');
+  obj.next('pre').slideUp();
+  }
+  }
+  
+  function toggle_thumbnails(imgs, show){
+  if(show === true){
+  imgs.parent().show();
+  imgs.show();
+  }
+  else {
+  img.slideUp(400, function(){ img.parent().hide(); });
+  }
+  }
+  
+  function global_toggle(obj){
+  var type = obj.attr('type');
+  var show = !obj.parent('li').hasClass('active');
+  if(show === true){
+  obj.parent('li').addClass('active');
+  }
+  else{
+  obj.parent('li').removeClass('active');
+  }
+  if(type == 'figure'){
+  toggle_thumbnails($('.thumbnail img'), show);
+  }
+  else {
+  $('.toggle.' + type).each(function() { toggle_block($(this), show); });
+  }
+  }
+  
+  /* onclick toggle next code block */
+  $('.toggle').click(function() {
+                     var span = $(this).find('span')
+                     console.log(span.hasClass('glyphicon-chevron-down'))
+                     toggle_block($(this), !span.hasClass('glyphicon-chevron-down'))
+                     return false
+                     })
+  
+  // global toggles
+  $('.toggle-global').click(function(){
+                            var type = $(this).attr('type');
+                            if(type === 'all-source'){
+                            $('li a.source').each(function() {
+                                                  global_toggle($(this));
+                                                  });
+                            }
+                            else if(type === 'all-output'){
+                            $.each(output_types, function(i, val){
+                                   console.log(val);
+                                   global_toggle($('li a.' + val));
+                                   });
+                            }
+                            else {
+                            global_toggle($(this));
+                            }
+                            return false;
+                            });
+  /* table of contents */
+  if($(['h1', 'h2', 'h3', 'h4'].join(',')).length > 0){
+  $('body > #wrap > .container > .row').append('<div class="col-md-2"><div id="toc" class="well sidebar sidenav affix hidden-print"/></div>');
+  $('#toc').generate_TOC();
+  }
+  
+  $.each(hidden_types, function(i, type) {
+         $('li[type=' + type + ']').each(function(){ global_toggle($(this)); });
+         });
+  
+  /* remove paragraphs with no content */
+  $('p:empty').remove();
+  
+  $body.scrollspy({
+                  target: '.sidebar',
+                  });
+  
+  /* theme switch */
+  $('.theme-switch').click(function(){
+                           var css = $('link[title=' + $(this).attr('title') + ']');
+                           $('#theme[rel=stylesheet]').attr('href', css.attr('href'));
+                           $('.theme-switch').closest('li').removeClass('active');
+                           $(this).closest('li').addClass('active');
+                           return false;
+                           });
+  /* code style switch */ //TODO use same function for both of these?
+  $('.highlight-switch').click(function(){
+                               var css = $('link[title="' + $(this).attr('title') + '"]');
+                               $('#highlight[rel=stylesheet]').attr('href', css.attr('href'));
+                               $('.highlight-switch').closest('li').removeClass('active');
+                               $(this).closest('li').addClass('active');
+                               return false;
+                               });
+  
+  //TODO refresh on show/hide
+  $window.on('load', function () {
+             $body.scrollspy('refresh');
+             })
+  
+  });
+    </script>
+
