--- a/_includes/_footer.html
+++ b/_includes/_footer.html
@@ -7,7 +7,11 @@
   </footer>
 </div>
 
-<script type="text/javascript" src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
+<!-- jQuery -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.10.3/jquery-ui.min.js"></script>
+
+<!--<script type="text/javascript" src="https://code.jquery.com/jquery-1.10.2.min.js"></script>-->
 <script type="text/javascript" src="{{ site.baseurl }}/assets/bootstrap.min.js"></script>
 <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
