--- a/_includes/_footer.html
+++ b/_includes/_footer.html
@@ -12,12 +12,9 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.10.3/jquery-ui.min.js"></script> -->
 
 <script type="text/javascript" src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
-</script><script defer="defer">
-    (function() {
-     /* style tables */
-     $('table').addClass('table table-striped table-bordered table-hover table-condensed');
-     });
-    </script>
+</script>
+    $("table").addClass("table table-striped table-bordered table-hover table-condensed");
+</script>
 <script type="text/javascript" src="{{ site.baseurl }}/assets/bootstrap.min.js"></script>
 <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
