--- a/_includes/_footer.html
+++ b/_includes/_footer.html
@@ -13,7 +13,9 @@
 
 <script type="text/javascript" src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
 </script>
-    $("table").addClass("table table-striped table-bordered table-hover table-condensed");
+    $(function(){
+        $("table").addClass("table table-striped table-bordered table-hover table-condensed");
+    });
 </script>
 <script type="text/javascript" src="{{ site.baseurl }}/assets/bootstrap.min.js"></script>
 <script>
