this should work

--- a/_includes/_footer.html
+++ b/_includes/_footer.html
@@ -12,10 +12,8 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.10.3/jquery-ui.min.js"></script> -->
 
 <script type="text/javascript" src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
-</script>
-    $(function(){
-        $("table").addClass("table table-striped table-bordered table-hover table-condensed");
-    });
+<script>
+    $("table").addClass("table table-striped table-bordered table-hover table-condensed");
 </script>
 <script type="text/javascript" src="{{ site.baseurl }}/assets/bootstrap.min.js"></script>
 <script>
