--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,7 +16,11 @@
                     <h1 class="title">{{ page.title }}</h1>
                 {% endif %}
             {% endif %}
+<!-- content starts here %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% -->
+
             {{ content }}
+
+<!-- content ends here %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% -->
         </div>
     </div>
 </div>
