--- a/_includes/_footer.html
+++ b/_includes/_footer.html
@@ -10,6 +10,8 @@
 <script type="text/javascript" src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
 <script>
     $("table").addClass("table table-striped table-bordered table-hover table-condensed");
+    $("pre").attr("style", "");
+    $("code").switchClass("laguage-R", "source r");
 </script>
 <script type="text/javascript" src="{{ site.baseurl }}/assets/bootstrap.min.js"></script>
 <script>
