--- a/_includes/_head.html
+++ b/_includes/_head.html
@@ -6,7 +6,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 <link rel="stylesheet" href="{{ site.baseurl }}/assets/bootstrap.css" media="screen">
 <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
-<!-- <link rel="stylesheet" href="{{ site.baseurl }}/assets/highlight.github.css">
+<link rel="stylesheet" href="{{ site.baseurl }}/assets/highlight.default.min.css">
 <script src="{{ site.baseurl }}/assets/highlight.pack.js"></script>
 <script>hljs.initHighlightingOnLoad();</script>
 <script>
@@ -15,7 +15,7 @@
             hljs.highlightBlock(block);
         });
     });
-</script> -->
+</script>
 <script type="text/javascript"
     src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
 </script>
