--- a/_includes/_head.html
+++ b/_includes/_head.html
@@ -22,18 +22,22 @@
 </script>
 <script type="text/x-mathjax-config">
     MathJax.Hub.Config({
-                       tex2jax: {inlineMath: [['$','$'], ['\\(','\\)']]}
-                       });
+        tex2jax: {inlineMath: [['$','$'], ['\\(','\\)']]}
+    });
     </script>
 <style type="text/css">
+{% if site.fancy %}
     /* different font family */
     @import url(https://fonts.googleapis.com/css?family=Yanone+Kaffeesatz);
     @import url(https://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic);
+{% endif %}
     /* padding for bootstrap navbar */
     body {
         padding-top: 70px;
         padding-bottom: 40px;
-        font-family: 'Droid Serif'; 
+{% if site.fancy %}
+        font-family: 'Droid Serif';
+{% endif %}
     }
     /* Google custom search look and feel */
     .gsc-results-wrapper-overlay, .gsc-results-wrapper-visible, .gsc-search-button, .gsc-search-button-v2 {
@@ -42,7 +46,9 @@
     /* same color as inline code */
     h1, h2, h3, h4, h5, h6 {
         color: #c7254e;
+{% if site.fancy %}
         font-family: 'Yanone Kaffeesatz';
+{% endif %}
     }
     /* override defaults to get info block */
     blockquote {
