--- a/_includes/_head.html
+++ b/_includes/_head.html
@@ -1,11 +1,13 @@
 <meta charset="utf-8">
 <title>{% if page.title %}{{ page.title | strip_html }} &#8211; {% endif %}{{ site.title }}</title>
+{% capture fancy %}{% if page.fancy %}{{ page.fancy }}{% else %}{{ site.title }}{% endif %}{% endcapture %}
+{% capture theme %}{% if page.theme %}{{ page.theme }}{% else %}{{ site.theme }}{% endif %}{% endcapture %}
 <meta name="description" content="{{ page.description }}">
 <meta name="keywords" content="{{ page.tags | join: ', ' }}">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 <!-- <link rel="stylesheet" href="{{ site.baseurl }}/assets/bootstrap.css" media="screen"> -->
-<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootswatch/3.3.4/{{ site.theme }}/bootstrap.min.css" media="screen">
+<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootswatch/3.3.4/{{ theme }}/bootstrap.min.css" media="screen">
 <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 <link rel="stylesheet" href="{{ site.baseurl }}/assets/highlight.default.min.css">
 <script src="{{ site.baseurl }}/assets/highlight.pack.js"></script>
@@ -26,7 +28,7 @@
     });
     </script>
 <style type="text/css">
-{% if site.fancy %}
+{% if fancy %}
     /* different font family */
     @import url(https://fonts.googleapis.com/css?family=Yanone+Kaffeesatz);
     @import url(https://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic);
@@ -35,7 +37,7 @@
     body {
         padding-top: 70px;
         padding-bottom: 40px;
-{% if site.fancy %}
+{% if fancy %}
         font-family: 'Droid Serif';
 {% endif %}
     }
@@ -46,7 +48,7 @@
     /* same color as inline code */
     h1, h2, h3, h4, h5, h6 {
         color: #c7254e;
-{% if site.fancy %}
+{% if fancy %}
         font-family: 'Yanone Kaffeesatz';
 {% endif %}
     }
