--- a/_includes/_navigation.html
+++ b/_includes/_navigation.html
@@ -1,5 +1,5 @@
-    <!-- <div class="navbar navbar-default navbar-fixed-top navbar-transparent"> -->
-    <div class="navbar navbar-fixed-top navbar-inverse">
+{% capture navbar %}{% if page.navbar %}{{ page.navbar }}{% else %}{{ site.navbar }}{% endif %}{% endcapture %}
+    <div class="navbar navbar-default navbar-fixed-top navbar-{{ navbar }}">
       <div class="container">
         <div class="navbar-header">
           <a class="navbar-brand" href="{{ site.baseurl }}">{{ site.title }}</a> 
