--- a/_includes/_head.html
+++ b/_includes/_head.html
@@ -1,11 +1,10 @@
 <meta charset="utf-8">
 <title>{% if page.title %}{{ page.title | strip_html }} &#8211; {% endif %}{{ site.title }}</title>
-{% capture fancyfonts %}{% if page.fancyfonts %}{{ page.fancyfonts }}{% else %}{{ site.fancyfonts }}{% endif %}{% endcapture %}
-{% capture theme %}{% if page.theme %}{{ page.theme }}{% else %}{{ site.theme }}{% endif %}{% endcapture %}
 <meta name="description" content="{{ page.description }}">
 <meta name="keywords" content="{{ page.tags | join: ', ' }}">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+{% capture theme %}{% if page.theme %}{{ page.theme }}{% else %}{{ site.theme }}{% endif %}{% endcapture %}
 <!-- <link rel="stylesheet" href="{{ site.baseurl }}/assets/bootstrap.css" media="screen"> -->
 <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootswatch/3.3.4/{{ theme }}/bootstrap.min.css" media="screen">
 <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
@@ -28,18 +27,14 @@
     });
     </script>
 <style type="text/css">
-{% if fancyfonts %}
-    /* different font family */
+    {% if page.fancyfonts or site.fancyfonts %}/* different font family */
     @import url(https://fonts.googleapis.com/css?family=Yanone+Kaffeesatz);
-    @import url(https://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic);
-{% endif %}
+    @import url(https://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic);{% endif %}
     /* padding for bootstrap navbar */
     body {
         padding-top: 70px;
         padding-bottom: 40px;
-{% if fancyfonts %}
-        font-family: 'Droid Serif';
-{% endif %}
+        {% if page.fancyfonts or site.fancyfonts %}font-family: 'Droid Serif';{% endif %}
     }
     /* Google custom search look and feel */
     .gsc-results-wrapper-overlay, .gsc-results-wrapper-visible, .gsc-search-button, .gsc-search-button-v2 {
@@ -48,9 +43,7 @@
     /* same color as inline code */
     h1, h2, h3, h4, h5, h6 {
         color: #c7254e;
-{% if fancyfonts %}
-        font-family: 'Yanone Kaffeesatz';
-{% endif %}
+        {% if page.fancyfonts or site.fancyfonts %}font-family: 'Yanone Kaffeesatz';{% endif %}
     }
     /* override defaults to get info block */
     blockquote {
