--- a/_includes/_navigation.html
+++ b/_includes/_navigation.html
@@ -14,51 +14,27 @@
             <li class="dropdown">
               <a class="dropdown-toggle" data-toggle="dropdown" href="#" id="results">Software <span class="caret"></span></a>
               <ul class="dropdown-menu" aria-labelledby="themes">
-                <li class="dropdown-header">R packages</li>
-                <li><a href="http://github.com/datacloning/dclone">dclone</a></li>
-                <li><a href="http://github.com/datacloning/dcmle">dcmle</a></li>
+                <li><a href="{{ site.baseurl }}/dc.html">Inroduction</a></li>
+                <li><a href="{{ site.baseurl }}/install.html">Installation</a></li>
                 <li class="divider"></li>
-                <li class="dropdown-header">Dependencies</li>
-                <li><a href="{{ site.baseurl }}/courses/">Courses</a></li>
-                <li><a href="{{ site.baseurl }}/tutorials/">Cosmo</a></li>
-
+                <li class="dropdown-header">R packages</li>
+                <li><a href="{{ site.baseurl }}/dclone">dclone</a></li>
+                <li><a href="{{ site.baseurl }}/dcmle">dcmle</a></li>
+                <li><a href="{{ site.baseurl }}/dcextras">dcextras</a></li>
               </ul>
             </li>
-
             <li class="dropdown">
               <a class="dropdown-toggle" data-toggle="dropdown" href="#" id="resources">Resources <span class="caret"></span></a>
               <ul class="dropdown-menu" aria-labelledby="themes">
-
+                <li><a href="{{ site.baseurl }}/docs/">Documentation</a></li>
+                <li><a href="{{ site.baseurl }}/tutorials/">Tutorials</a></li>
                 <li><a href="{{ site.baseurl }}/courses/">Courses</a></li>
-                <li><a href="{{ site.baseurl }}/courses/">Courses</a></li>
-                <li class="divider"></li>
-                <li><a href="./cerulean/">Cerulean</a></li>
-                <li><a href="./cosmo/">Cosmo</a></li>
-                <li><a href="./cyborg/">Cyborg</a></li>
-                <li><a href="./darkly/">Darkly</a></li>
-                <li><a href="./flatly/">Flatly</a></li>
-                <li><a href="./journal/">Journal</a></li>
-                <li><a href="./lumen/">Lumen</a></li>
-                <li><a href="./paper/">Paper</a></li>
-                <li><a href="./readable/">Readable</a></li>
-                <li><a href="./sandstone/">Sandstone</a></li>
-                <li><a href="./simplex/">Simplex</a></li>
-                <li><a href="./slate/">Slate</a></li>
-                <li><a href="./spacelab/">Spacelab</a></li>
-                <li><a href="./superhero/">Superhero</a></li>
-                <li><a href="./united/">United</a></li>
-                <li><a href="./yeti/">Yeti</a></li>
-
+                <li><a href="{{ site.baseurl }}/talks.html">Talks</a></li>
               </ul>
             </li>
             <li><a href="{{ site.baseurl }}/news.html">Blog</a></li>
             <li><a href="{{ site.baseurl }}/search.html">Search</a></li>
            </ul>
-
-<!--          <ul class="nav navbar-nav navbar-right">
-            <li><a href="{{ site.baseurl }}/search.html">Search</a></li>
-          </ul> -->
-
         </div>
       </div>
     </div>
