added usage to nabber

--- a/_includes/_navigation.html
+++ b/_includes/_navigation.html
@@ -16,6 +16,7 @@
               <ul class="dropdown-menu" aria-labelledby="themes">
                 <li><a href="{{ site.baseurl }}/dc.html">Inroduction</a></li>
                 <li><a href="{{ site.baseurl }}/install.html">Installation</a></li>
+                <li><a href="{{ site.baseurl }}/usage.html">Usage</a></li>
                 <li class="divider"></li>
                 <li class="dropdown-header">R packages</li>
                 <li><a href="{{ site.baseurl }}/dclone">dclone</a></li>
