--- a/_includes/_head.html
+++ b/_includes/_head.html
@@ -53,3 +53,4 @@
     }
 </style>
 <link rel="shortcut icon" href="{{ site.baseurl }}/favicon.ico">
+<link rel="stylesheet" href="https://github.com/gvwilson/using-jekyll/blob/gh-pages/css/swc.css">
