cleanup with tracking

--- a/_includes/_navigation.html
+++ b/_includes/_navigation.html
@@ -19,9 +19,9 @@
                 <li><a href="{{ site.baseurl }}/usage.html">Usage</a></li>
                 <li class="divider"></li>
                 <li class="dropdown-header">R packages</li>
-                <li><a href="{{ site.baseurl }}/dclone">dclone</a></li>
-                <li><a href="{{ site.baseurl }}/dcmle">dcmle</a></li>
-                <li><a href="{{ site.baseurl }}/dcextras">dcextras</a></li>
+                <li><a href="https://github.com/datacloning/dclone">dclone</a></li>
+                <li><a href="https://github.com/datacloning/dcmle">dcmle</a></li>
+                <li><a href="https://github.com/datacloning/dcextras">dcextras</a></li>
               </ul>
             </li>
             <li class="dropdown">
