commenting out construction zone

--- a/_includes/_navigation.html
+++ b/_includes/_navigation.html
@@ -14,9 +14,9 @@
             <li class="dropdown">
               <a class="dropdown-toggle" data-toggle="dropdown" href="#" id="results">Software <span class="caret"></span></a>
               <ul class="dropdown-menu" aria-labelledby="themes">
-                <li><a href="{{ site.baseurl }}/dc.html">Inroduction</a></li>
+                <! -- <li><a href="{{ site.baseurl }}/dc.html">Inroduction</a></li>
                 <li><a href="{{ site.baseurl }}/install.html">Installation</a></li>
-                <li><a href="{{ site.baseurl }}/usage.html">Usage</a></li>
+                <li><a href="{{ site.baseurl }}/usage.html">Usage</a></li> -->
                 <li class="divider"></li>
                 <li class="dropdown-header">R packages</li>
                 <li><a href="https://github.com/datacloning/dclone">dclone</a></li>
