--- a/_includes/_slidefooter.html
+++ b/_includes/_slidefooter.html
@@ -18,6 +18,10 @@
         }).parent().addClass('has-jax');
     });
     MathJax.Hub.Configured();
+    remark.macros.scale = function (percentage) {
+        var url = this;
+        return '<img src="' + url + '" style="width: ' + percentage + '" />';
+    };
 </script>
 </body>
 </html>
