--- a/_layouts/raw.html
+++ b/_layouts/raw.html
@@ -17,7 +17,7 @@
                     <h1 class="title">{{ page.title }}</h1>
                 {% endif %}
             {% endif %}
-<pre><code class="language-nohighlight">{{ content }}</code></pre>
+<pre>{{ content }}</pre>
         </div>
     </div>
 </div>
