--- a/_includes/_navigation.html
+++ b/_includes/_navigation.html
@@ -34,6 +34,7 @@
                 <li><a href="{{ site.baseurl }}/publications.html">Publications</a></li>
                 <li><a href="{{ site.baseurl }}/talks.html">Talks</a></li>
                 <li><a href="{{ site.baseurl }}/faq.html">FAQ</a></li>
+                <li><a href="{{ site.baseurl }}/forum.html">Forum</a></li>
             	<li><a href="{{ site.baseurl }}/issues.html">Issues</a></li>
               </ul>
             </li>
