start with header

--- a/_layouts/course.html
+++ b/_layouts/course.html
@@ -10,13 +10,14 @@
     <div class="row">
         <div class="col-md-10 col-md-offset-1">
         {% if page.course %}
+            <h3><em>{{ page.course.title }}</em></h3>
             <ul class="breadcrumb">
                 <li><a href="{{ site.baseurl }}">Home</a></li>
                 <li><a href="{{ site.baseurl }}/courses/">Courses</a></li>
                 <li><a href="{{ site.baseurl }}/courses/{{ page.course.year }}/{{ page.course.location }}/">{{ page.course.location }} {{ page.course.year }}</a></li>
                 <li class="active">{{ page.course.lecture }}</li>
             </ul>                
-        <h1 class="title">{{ page.title }}</h1>
+            <h1 class="title">{{ page.title }}</h1>
         {% endif %}
 <!-- content starts here %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% -->
 
