--- a/_includes/_slidehead.html
+++ b/_includes/_slidehead.html
@@ -13,7 +13,7 @@
         font-weight: normal;
         color: #c7254e;
     }
-    .red { color: #fa0000; }
+    .red { color: #c7254e; }
     .footnote {
         position: absolute;
         bottom: 3em;
