--- a/_layouts/course.html
+++ b/_layouts/course.html
@@ -42,6 +42,21 @@
 	</div>
     <div class="row">
     	<div class="col-md-10 col-md-offset-1">
+
+			<span class="pull-right">
+    		  <div class="btn-group">
+      			<a href="#" class="btn btn-default dropdown-toggle" data-toggle="dropdown">
+		        Download
+        		<span class="caret"></span>
+      			</a>
+      			<ul class="dropdown-menu">
+        			<li><a href="#">html</a></li>
+        			<li><a href="#">pdf</a></li>
+        			<li><a href="#">Rmd</a></li>
+       			</ul>
+    		  </div>
+			</span>
+
             <h1 class="title">{{ page.title }}</h1>
 {% else %}
     <div class="row">
