footer same width

--- a/_includes/_footer.html
+++ b/_includes/_footer.html
@@ -1,10 +1,14 @@
 <div class="container">
-  <footer>
-    <hr>
-    <p>This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International License</a>.</p>
-    <p>Last updated: {{ site.time | date: "%Y-%m-%d" }}. Maintained by <a href="http://peter.solymos.org">P&eacute;ter S&oacute;lymos</a>.</p>
-    <p>Powered by <a href="http://jekyllrb.com">Jekyll</a> using <a href="http://getbootstrap.com/">Bootstrap</a> and <a href="http://bootswatch.com/">Bootswatch</a>. Source code hosted on <a href="https://github.com/datacloning/datacloning.github.io">GitHub</a>.</p>
-  </footer>
+  <div class="row">
+    <div class="col-md-8 col-md-offset-2">
+      <footer>
+      <hr>
+      <p>This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International License</a>.</p>
+      <p>Last updated: {{ site.time | date: "%Y-%m-%d" }}. Maintained by <a href="http://peter.solymos.org">P&eacute;ter S&oacute;lymos</a>.</p>
+      <p>Powered by <a href="http://jekyllrb.com">Jekyll</a> using <a href="http://getbootstrap.com/">Bootstrap</a> and <a href="http://bootswatch.com/">Bootswatch</a>. Source code hosted on <a href="https://github.com/datacloning/datacloning.github.io">GitHub</a>.</p>
+      </footer>
+    </div>
+  </div>
 </div>
 
 <script type="text/javascript" src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
