--- a/_includes/_footer.html
+++ b/_includes/_footer.html
@@ -4,8 +4,8 @@
       <footer>
       <hr>
       <p><a rel="license" href="http://creativecommons.org/licenses/by/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/4.0/80x15.png" /></a>
-      <small>Powered by <a href="http://jekyllrb.com">Jekyll</a>, <a href="http://bootswatch.com/">Bootswatch</a>, and <a href="https://github.com/datacloning/datacloning.github.io">GitHub</a>.
-      Last updated on {{ site.time | date: "%Y-%m-%d" }} by <a href="http://peter.solymos.org">P&eacute;ter S&oacute;lymos</a></small></p>
+      <small>&mdash; Powered by <a href="http://jekyllrb.com">Jekyll</a>, <a href="http://bootswatch.com/">Bootswatch</a>, and <a href="https://github.com/datacloning/datacloning.github.io">GitHub</a>.
+      &mdash; Last updated on {{ site.time | date: "%Y-%m-%d" }} by <a href="http://peter.solymos.org">P&eacute;ter S&oacute;lymos</a>.</small></p>
       </footer>
     </div>
   </div>
