--- a/_includes/_head.html
+++ b/_includes/_head.html
@@ -38,7 +38,7 @@
     body {
         padding-top: 40px;
         padding-bottom: 40px;
-        {% if site.fancyfonts == true %}font-family: 'Droid Serif';{% endif %}
+        {% if site.fancyfonts == true %}font-family: 'Droid Serif', sans-serif;{% endif %}
     }
     /* Google custom search look and feel */
     .gsc-results-wrapper-overlay, .gsc-results-wrapper-visible, .gsc-search-button, .gsc-search-button-v2 {
@@ -47,7 +47,7 @@
     /* same color as inline code */
     h1, h2, h3, h4, h5, h6 {
         color: #c7254e;
-        {% if site.fancyfonts == true %}font-family: 'Yanone Kaffeesatz';{% endif %}
+        {% if site.fancyfonts == true %}font-family: 'Yanone Kaffeesatz', sans-serif;{% endif %}
     }
     /* override defaults to get info block */
     blockquote {
