--- a/_layouts/course.html
+++ b/_layouts/course.html
@@ -28,16 +28,19 @@
 
 			{% if page.course.file %}
 			<span class="pull-right">
-    		  <div class="btn-group">
-      			<a href="#" class="btn btn-primary btn-sm dropdown-toggle" data-toggle="dropdown">
-		        Download
-        		<span class="caret"></span>
-      			</a>
-      			<ul class="dropdown-menu">
+			  <div class="btn-group">
+			    <a href="{{ site.baseurl }}/courses/{{ page.course.year }}/{{ page.course.location | downcase }}/slides-{{ page.course.file }}.html" class="btn btn-default">Slides</a>
+    		    <div class="btn-group">
+      			  <a href="#" class="btn btn-primary btn-sm dropdown-toggle" data-toggle="dropdown">
+		          Download
+        		  <span class="caret"></span>
+      			  </a>
+      			  <ul class="dropdown-menu">
         			<li><a href="{{ page.url }}" download>html</a></li>
-        			<li><a href="{{ site.baseurl }}/courses/{{ page.course.year }}/{{ page.course.location | downcase }}/{{ page.course.file }}.pdf" download>pdf</a></li>
-        			<li><a href="https://raw.githubusercontent.com/datacloning/datacloning.github.io/master/courses/{{ page.course.year }}/{{ page.course.location | downcase }}/{{ page.course.file }}.Rmd" download>Rmd</a></li>
-       			</ul>
+        			<li><a href="{{ site.baseurl }}/courses/{{ page.course.year }}/{{ page.course.location | downcase }}/notes-{{ page.course.file }}.pdf" download>pdf</a></li>
+        			<li><a href="https://raw.githubusercontent.com/datacloning/datacloning.github.io/master/courses/{{ page.course.year }}/{{ page.course.location | downcase }}/notes-{{ page.course.file }}.Rmd" download>Rmd</a></li>
+       			  </ul>
+    		    </div>
     		  </div>
 			</span>
 			{% endif %}
