more visible license

--- a/_includes/_footer.html
+++ b/_includes/_footer.html
@@ -3,9 +3,14 @@
     <div class="col-md-8 col-md-offset-2">
       <footer>
       <hr>
-      <p><a rel="license" href="http://creativecommons.org/licenses/by/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/4.0/80x15.png" /></a>
-      <small>&mdash; Powered by <a href="http://jekyllrb.com">Jekyll</a>, <a href="http://bootswatch.com/">Bootswatch</a>, and <a href="https://github.com/datacloning/datacloning.github.io">GitHub</a>.
-      &mdash; Last updated on {{ site.time | date: "%Y-%m-%d" }} by <a href="http://peter.solymos.org">P&eacute;ter S&oacute;lymos</a>.</small></p>
+      <p>
+      <small>
+        <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/"><img alt="Creative Commons Licence" style="border-width:0" src="https://i.creativecommons.org/l/by-sa/4.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike 4.0 International License</a>.      
+      <br />
+      Powered by <a href="http://jekyllrb.com">Jekyll</a>, <a href="http://bootswatch.com/">Bootswatch</a>, and <a href="https://github.com/datacloning/datacloning.github.io">GitHub</a>.
+      <br />
+      Last updated on {{ site.time | date: "%Y-%m-%d" }} by <a href="http://peter.solymos.org">P&eacute;ter S&oacute;lymos</a>.
+      </small></p>
       </footer>
     </div>
   </div>
